--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -59,7 +59,7 @@
     <string name="promedio_profundidad_epicentro">Average epicenter depth</string>
     <string name="m_xima_magnitud">Maximum magnitude</string>
     <string name="m_nima_profundidad">Minimum depth</string>
-    <string name="top_ciudades_con_m_s_sismos">Top cities with the most earthquakes</string>
+    <string name="top_ciudades">Top cities with the most earthquakes</string>
     <string name="REPORT_FORMAT" formatted="false">%s %s</string>
     <string name="JAN">January</string>
     <string name="FEB">February</string>
@@ -126,7 +126,7 @@
     <string name="verified_format_notification">[Correction] %s</string>
     <string name="no_alert_title_notification">Quake of %.1f</string>
     <string name="no_alert_description_notification">Registered at %s</string>
-    <string name="alert_description_notification">Quake of %.1f registered at %s</string>
+    <string name="alert_description_notification">Quake of %1$.1f registered at %2$s</string>
     <string name="sismos_chile">Earthquakes in Chile</string>
     <string name="revisa_los_ltimos_sismos_en_chile">Check last earthquakes in Chile</string>
     <string name="desliza_a_la_izquierda">Swipe left</string>
