--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="contact_key" translatable="false">contact_email</string>
     <string name="minimum_magnitude_key" translatable="false">minimum_magnitude</string>
     <string name="shared_pref_map_type" translatable="false">map_type</string>
+    <string name="shared_pref_cv_permission" translatable="false">cv_alert_permission</string>
 
     <!-- KEY INTENT -->
 
@@ -271,5 +272,9 @@
     <string name="min_magnitude_dialog_message">Sismos mayores que … \nEjemplo: 5.6, 3.5, 2.9, etc.</string>
     <string name="improvement_1">- Nuevo sistema de notificaciones: alertas de sismos preliminares, alertas con magnitudes personalizables y alertas de alta prioridad. (Véase sección configuraciones)</string>
     <string name="improvement_2">- Mejoras de estabilidad de sistema</string>
+    <string name="activar">Activar</string>
+    <string name="alert_permission_description">Este dispositivo cuenta con Android 13. Para recibir alertas de sismos se requiere activar el permiso para notificaciones</string>
+    <string name="alert_permission_title">Permiso para alertas sísmicas</string>
+
 
 </resources>
