--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,6 @@
     <string name="firebase_channel_name_quakes">Alerta sismos</string>
     <string name="firebase_channel_description_quakes">Recibe alertas de sismos</string>
     <string name="firebase_channel_status" translatable="false">channel_created</string>
-    <string name="firebase_msg_data_status" translatable="false">data_message_received</string>
     <string name="firebase_msg_notification_status" translatable="false">notification_message_received</string>
     <string name="try_intent_notification" translatable="false">TRY_INTENT_NOTIFICATION</string>
     <string name="firebase_pref_key" translatable="false">pref_suscrito_quake</string>
@@ -73,19 +72,18 @@
 
     <!-- SHARE PREFERENCES KEYS (Variables) -->
     <string name="shared_pref_master_key" translatable="false">lastquakechile</string>
-    <string name="shared_pref_actual_version_code" translatable="false">actual_v_code</string>
     <string name="night_mode_category_key" translatable="false">nigh_mode_pref_category</string>
     <string name="shared_report_cache" translatable="false">reports_cache_entry</string>
-    <string name="high_priority_key" translatable="false">high_priority_notifications</string>
-    <string name="quake_preliminary_key" translatable="false">quake_preliminary</string>
     <string name="version_key" translatable="false">version</string>
     <string name="contact_key" translatable="false">contact_email</string>
-    <string name="minimum_magnitude_key" translatable="false">minimum_magnitude</string>
     <string name="shared_pref_map_type" translatable="false">map_type</string>
     <string name="shared_pref_cv_permission" translatable="false">cv_alert_permission</string>
 
-    <!-- KEY INTENT -->
-
+    <!-- ROOT PREFERENCES -->
+    <string name="night_mode_key" translatable="false">pref_night_mode</string>
+    <string name="high_priority_key" translatable="false">high_priority_notifications</string>
+    <string name="quake_preliminary_key" translatable="false">quake_preliminary</string>
+    <string name="minimum_magnitude_key" translatable="false">minimum_magnitude</string>
 
     <!-- STRINGS DE LAYOUTS-->
     <string name="circulo_pintado">Color magnitud sismo</string>
@@ -145,7 +143,6 @@
         <item quantity="one">Último %d sismo</item>
         <item quantity="other">Últimos %d sismos</item>
     </plurals>
-    <string name="night_mode_key" translatable="false">pref_night_mode</string>
     <string name="night_mode_key_toast_on">Modo noche activado</string>
     <string name="night_mode_key_toast_off">Modo noche desactivado</string>
     <string name="night_mode_pref_summary">Ahorra batería y evita tu cansancio ocular</string>
@@ -153,7 +150,6 @@
     <string name="night_mode_pref_title_switch">Modo noche</string>
     <string name="night_mode_manual_pref_summary_on">Activado</string>
     <string name="night_mode_manual_pref_summary_off">Desactivado</string>
-    <string name="random_channel_key" translatable="false">random_channel_id</string>
 
     <string name="JAN">Enero</string>
     <string name="FEB">Febrero</string>
@@ -184,17 +180,7 @@
     <string name="icon_ad_app">Icono publicidad aplicación</string>
 
     <!-- FOR TIMBER -->
-    <string name="SHARED_VERSION_CODE_APP" translatable="false">Store version code: </string>
-    <string name="VERSION_CODE_APP" translatable="false">Installed version code: </string>
-    <string name="NEW_VERSION_DETECTED" translatable="false">New version detected</string>
-    <string name="NO_NEW_VERSION_DETECTED" translatable="false">New version NOT detected</string>
-    <string name="GP_UPDATED" translatable="false">Updated</string>
     <string name="NIGHT_MODE" translatable="false">NightMode</string>
-    <string name="UPDATE_AVAILABLE" translatable="false">Update available</string>
-    <string name="UPDATE_NOT_AVAILABLE" translatable="false">Update not available</string>
-    <string name="FIREBASE_CHANNEL_CREATED" translatable="false">Notification channel created</string>
-    <string name="FIREBASE_CHANNEL_DELETED" translatable="false">Notification channel deleted</string>
-    <string name="TRY_INTENT_NOTIFICATION_1" translatable="false">Trying intent notification</string>
     <string name="FIREBASE_SUB_OK" translatable="false">Subscribed</string>
     <string name="FIREBASE_SUB_DELETE" translatable="false">Subscription deleted</string>
     <string name="FIREBASE_SUB_ALREADY" translatable="false">Already subscribed</string>
@@ -217,8 +203,7 @@
     <string name="UPDATE_INTENT_FAILED" translatable="false">Update intent failed</string>
     <string name="UPDATE_FAILED" translatable="false">Update flow failed! Result code: %s</string>
     <string name="INTENT_BROWSER" translatable="false">Opening browser</string>
-    <string name="GP_REQUEST" translatable="false">Request update</string>
-    <string name="GP_NOT_SUPPORTED" translatable="false">Not supported</string>
+    <string name="GP_NOT_SUPPORTED" translatable="false"></string>
     <string name="UPDATE_MANAGER_FAILED" translatable="false">onResume updater manager failed</string>
     <string name="GOOGLE_MAP_ERROR_SNAPSHOT" translatable="false">Error screenshot map: %s</string>
     <string name="about_msg">LastQuakeChile, te permite visualizar rápidamente los últimos sismos ocurridos en Chile</string>
