--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -150,4 +150,5 @@
     <string name="privacy_policy">Privacy policy</string>
     <string name="cd_details_icon">Open details icon</string>
     <string name="details">Details</string>
+    <string name="share">Share</string>
 </resources>
