--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -150,4 +150,5 @@
     <string name="privacy_policy">Política de privacidad</string>
     <string name="cd_details_icon">Icono abrir detalles</string>
     <string name="details">Detalles</string>
+    <string name="share">Compartir</string>
 </resources>
