--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,5 +187,6 @@
     <string name="privacy_policy">Política de privacidad</string>
     <string name="cd_details_icon">Open details icon</string>
     <string name="details">Details</string>
+    <string name="share">Share</string>
 
 </resources>
