Correcciones de imports post-merge
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -153,4 +153,6 @@
     <string name="share">Share</string>
     <string name="verified_quake_icon">Verified earthquake icon</string>
     <string name="quake_verified_toast">Verified earthquake</string>
+    <string name="reference_icon">Reference icon</string>
+    <string name="hour_icon">Time icon</string>
 </resources>
