Renombramiento de strings
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="painted_circle">Quake magnitude color</string>
-    <string name="imagen_toolbar">Toolbar background image</string>
-    <string name="datetime_icon">DateTime quake icon</string>
-    <string name="tiempo">Date/Hour</string>
+    <string name="cd_paint_circle">Quake magnitude color</string>
+    <string name="cd_toolbar_image">Toolbar background image</string>
+    <string name="cd_datetime_icon">DateTime quake icon</string>
+    <string name="date_time_title">Date/Hour</string>
     <string name="gms_icon">Georeference position quake icon</string>
-    <string name="distancia">Position DMS</string>
-    <string name="depth_icon">Epicenter icon</string>
-    <string name="scale_icon">Scale icon</string>
-    <string name="depth">Depth</string>
-    <string name="scale">Scale</string>
-    <string name="quake_details_magnitud_local">Magnitude local (Ml)</string>
-    <string name="quake_details_magnitud_momento">Moment magnitude (Mw)</string>
-    <string name="sensitive_icon">Sensitive quake icon</string>
+    <string name="gms_title">Position DMS</string>
+    <string name="cd_depth_icon">Epicenter icon</string>
+    <string name="cd_scale_icon">Scale icon</string>
+    <string name="depth_title">Depth</string>
+    <string name="scale_title">Scale</string>
+    <string name="local_magnitude">Magnitude local (Ml)</string>
+    <string name="moment_magnitude">Moment magnitude (Mw)</string>
+    <string name="cd_sensitive_icon">Sensitive quake icon</string>
     <string name="firebase_channel_name_quakes">Quake alerts</string>
     <string name="firebase_channel_description_quakes">Receives quake alerts</string>
-    <string name="coordenadas_oeste">W</string>
-    <string name="coordenadas_este">E</string>
-    <string name="seccion_listado_de_sismos">List of quakes section</string>
-    <string name="boton_compartir_sismo">Button to share quake</string>
-    <string name="imagen_estado_sismo">Quake status image</string>
+    <string name="west_cords">W</string>
+    <string name="east_cords">E</string>
+    <string name="cd_quake_list_section">List of quakes section</string>
+    <string name="cd_share_quake_button">Button to share quake</string>
+    <string name="cd_quake_state_icon">Quake status image</string>
     <string name="quakes_details_estado_sismo">Quake %s</string>
     <string name="quakes_details_estado_sismo_preliminar">preliminary</string>
     <string name="quakes_details_estado_sismo_verificado">verified</string>
@@ -28,8 +28,7 @@
     <string name="quake_time_hour_info_windows">%1$d h ago</string>
     <string name="quake_time_day_hour_info_windows">%1$d d %2$d h ago</string>
     <string name="quake_time_day_info_windows">%1$d d ago</string>
-    <string name="profundidad_info_windows">Depth: %.1f Km</string>
-    <string name="settings">Settings</string>
+    <string name="menu_settings">Settings</string>
     <string name="firebase_pref_key_alert_off">Alerts disabled</string>
     <string name="firebase_pref_key_alert_on">Alerts enabled</string>
     <string name="night_mode_key_toast_on">Night mode on</string>
@@ -52,14 +51,14 @@
     <string name="quake_list_number_pref_title">Quake data</string>
     <string name="quake_list_number_pref_summary">Number of quakes you want to see</string>
     <string name="tab_reports">Reports</string>
-    <string name="icono_reporte_mensual">Monthly report icon</string>
-    <string name="n_sismos_reportados">N° reported quakes</string>
-    <string name="n_sismos_sensibles">N° sensitive quakes</string>
-    <string name="promedio_magnitud">Average magnitude</string>
-    <string name="promedio_profundidad_epicentro">Average epicenter depth</string>
-    <string name="m_xima_magnitud">Maximum magnitude</string>
-    <string name="m_nima_profundidad">Minimum depth</string>
-    <string name="top_ciudades">Top cities with the most earthquakes</string>
+    <string name="cd_monthly_report_icon">Monthly report icon</string>
+    <string name="n_report_quakes">N° reported quakes</string>
+    <string name="n_quakes_sensitives">N° sensitive quakes</string>
+    <string name="magnitude_mean">Average magnitude</string>
+    <string name="mean_depth_epicentre">Average epicenter depth</string>
+    <string name="max_magnitude">Maximum magnitude</string>
+    <string name="min_depth">Minimum depth</string>
+    <string name="top_cities">Top cities with the most earthquakes</string>
     <string name="JAN">January</string>
     <string name="FEB">February</string>
     <string name="MAR">March</string>
@@ -76,21 +75,20 @@
     <string name="night_mode_key_toast_off">Night mode off</string>
     <string name="version">"Version "</string>
     <string name="novedades">New things</string>
-    <string name="entendido">OK</string>
-    <string name="qu_hay_de_nuevo_en_la_app">What\'s new in the app?</string>
+    <string name="ok">OK</string>
+    <string name="change_log_title">What\'s new in the app?</string>
     <string name="map_type">Map type</string>
-    <string name="new_version_icon">New Version Icon</string>
-    <string name="estilo_mapa">Map style</string>
-    <string name="icono_aplicacion_publicidad">Ad icon</string>
-    <string name="ver_m_s">Visit site</string>
+    <string name="cd_new_version_icon">New Version Icon</string>
+    <string name="menu_map_style_title">Map style</string>
+    <string name="see_more">Visit site</string>
     <string name="http_error">Oops, something went wrong!</string>
     <string name="io_error">Check your internet connection</string>
-    <string name="icon_ad_app">Icon ad app</string>
+    <string name="cd_ad_app_icon">Icon ad app</string>
     <string name="about_msg">LastQuakeChile, allows you to quickly view the latest earthquakes in Chile</string>
     <string name="contact_developer">Contact developer</string>
     <string name="contact_summary">Suggestions? Problems?</string>
     <string name="about">About</string>
-    <string name="no_apagado">Wifi turn off</string>
+    <string name="cd_wifi_off">Wifi turn off</string>
     <string name="wifi_off_msg">Check your connection</string>
     <string name="SHARE_TITLE">Seismic alert</string>
     <string name="SHARE_SUB_TITLE">Seismological information</string>
@@ -103,13 +101,13 @@
     <string name="email_chooser_title">Send email with:</string>
     <string name="email_intent_fail">You don\'t have any email app to contact us</string>
     <string name="email_subject">LastQuakeChlle developer contact</string>
-    <string name="reintentar">Retry</string>
+    <string name="retry">Retry</string>
     <string name="service_error">Quake server not available</string>
-    <string name="recargar">Reload</string>
+    <string name="menu_reload_title">Reload</string>
     <string name="no_mas_sismos">No more items</string>
     <string name="swipe_left">Swipe left to see earthquakes</string>
     <string name="local_copy">Showing local copy</string>
-    <string name="swipe_left_icon">Left icon</string>
+    <string name="cd_swipe_left_icon">Left icon</string>
     <string name="view_quake_notification_button">See earthquake</string>
     <string name="shortcut_short_map_label">Quakes map</string>
     <string name="shortcut_long_map_label">Last quakes map</string>
@@ -126,33 +124,33 @@
     <string name="no_alert_title_notification">Quake of %.1f</string>
     <string name="no_alert_description_notification">Registered at %s</string>
     <string name="alert_description_notification">Quake of %1$.1f registered at %2$s</string>
-    <string name="sismos_chile">Earthquakes in Chile</string>
-    <string name="revisa_los_ltimos_sismos_en_chile">Check last earthquakes in Chile</string>
-    <string name="desliza_a_la_izquierda">Swipe left</string>
-    <string name="contenido_multimedia_de_publicidad">Ad media content</string>
-    <string name="puntaje_estrellas_aplicaci_n_publicidad">Star points ad app</string>
-    <string name="ad_pager_content_description">Ad section</string>
-    <string name="quakes_pager_content_description">Quakes section</string>
-    <string name="map_pager_content_description">Map section</string>
-    <string name="reports_pager_content_description">Reports section</string>
+    <string name="ad_title_offline">Earthquakes in Chile</string>
+    <string name="ad_description_offline">Check last earthquakes in Chile</string>
+    <string name="swipe_to_left">Swipe left</string>
+    <string name="cd_multimedia_content">Ad media content</string>
+    <string name="cd_stars">Star points ad app</string>
+    <string name="cd_ad_pager">Ad section</string>
+    <string name="cd_quakes_pager">Quakes section</string>
+    <string name="cd_map_pager">Map section</string>
+    <string name="cd_reports_pager">Reports section</string>
     <string name="high_priority_title">Use high priority notifications</string>
     <string name="high_priority_summary">Show previews of notifications at the top of the screen</string>
     <string name="preliminary_pref_title">Preliminary quakes alerts</string>
-    <string name="service_status">Service status</string>
+    <string name="menu_service_status_title">Service status</string>
     <string name="minimum_magnitude_title">Minimum magnitude alert</string>
     <string name="min_magnitude_dialog_title">Minimum magnitude</string>
     <string name="min_magnitude_dialog_message">Earthquakes greater than … \nExample: 5.6, 3.5, 2.9, etc</string>
     <string name="improvement_1">- New notification system: preliminary earthquake alerts, alerts with customizable magnitudes and high priority alerts (See configs section)</string>
     <string name="improvement_2">- Stability improvements</string>
-    <string name="activar">Activate</string>
+    <string name="activate_button">Activate</string>
     <string name="alert_permission_description">This device is running Android 13. To receive earthquake alerts it is required to activate the permission for notifications.</string>
     <string name="alert_permission_title">Permission for earthquake alerts</string>
     <string name="privacy_policy">Privacy policy</string>
     <string name="cd_details_icon">Open details icon</string>
     <string name="details">Details</string>
     <string name="share">Share</string>
-    <string name="verified_quake_icon">Verified earthquake icon</string>
+    <string name="cd_verified_quake_icon">Verified earthquake icon</string>
     <string name="quake_verified_toast">Verified earthquake</string>
-    <string name="reference_icon">Reference icon</string>
-    <string name="hour_icon">Time icon</string>
+    <string name="cd_reference_icon">Reference icon</string>
+    <string name="cd_hour_icon">Time icon</string>
 </resources>
